# eolabs

./: .gitignore
lab_1/: aral_sea_timeseries.ipynb  pyproject.toml
