[project]
name = "eolabs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "rasterio>=1.4",
    "matplotlib>=3.9",
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "imageio[ffmpeg]>=2.34",
    "pillow>=10.0",
]
